Update eclipsejdt_lsp.md